@@ -1,5 +1,7 @@
-# Copyright 2008-2009 WebDriver committers
-# Copyright 2008-2009 Google Inc.
+#!/usr/bin/python
+#
+# Copyright 2011 Webdriver_name committers
+# Copyright 2011 Google Inc.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,31 +14,30 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-from __future__ import with_statement
-__all__ = ["WebDriver"]
+
+import base64
+import httplib
+from selenium.common.exceptions import ErrorInResponseException
 from selenium.webdriver.remote.command import Command
 from selenium.webdriver.remote.webdriver import WebDriver as RemoteWebDriver
-from driver import ChromeDriver
-from selenium.webdriver.common.desired_capabilities import DesiredCapabilities
+from selenium.webdriver.remote.webelement import WebElement
+from selenium.webdriver.common.desired_capabilities import DesiredCapabilities 
+from service import Service
 
 class WebDriver(RemoteWebDriver):
-    def __init__(self):
-        RemoteWebDriver.__init__(self,
-            command_executor=ChromeDriver(custom_profile=None, 
-            untrusted_certificates=False),
+
+    def __init__(self, executable_path="chromedriver"):
+        self.service = Service(executable_path)
+        self.service.start()
+
+        RemoteWebDriver.__init__(self, 
+            command_executor=self.service.service_url, 
             desired_capabilities=DesiredCapabilities.CHROME)
-    
-    def start_client(self):
-        self.command_executor.start()
 
-    def stop_client(self):
-        self.command_executor.stop()
-
-    def wait_for_load_complete(self):
-        # Interface compatibility
-        return
-
-    def save_screenshot(self, jpeg_file):
-        image = self._execute(Command.SCREENSHOT)['value']
-        with open(jpeg_file, "w") as fo:
-            fo.write(image.decode("base64"))
+    def quit(self):
+        try:
+            RemoteWebDriver.quit(self)
+        except httplib.BadStatusLine:
+            pass
+        finally:
+            self.service.stop()
